<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>communication_skills</name>
  <version>1.0.0</version>
  <description>Interfaces for PAL Communication skills</description>
  <maintainer email="luka.juricic@pal-robotics.com">user</maintainer>
  <license>Apache License 2.0</license>
  <author email="luka.juricic@pal-robotics.com">Luka Juricic</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>chatbot_msgs</depend>
  <depend>std_skills</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>

    <skill content-type="json">
      {
        "id": "ask",
        "description": "Get information through a dialogue",
        "interface": "action",
        "default_interface_path": "/ask",
        "datatype": "communication_skills/action/Ask",
        "parameters": [
          {
            "name": "person_id",
            "type": "string",
            "description": "The ID of the person to interact with. If empty, any user can be interacted with."
          },
          {
            "name": "group_id",
            "type": "string",
            "description": "The ID of the group of persons to interact with. If empty, any group of persons can be interacted with. If not empty, the 'person_id' field should be ignored."
          },
          {
            "name": "answers_schema",
            "type": "string",
            "description": "The JSON dictionary of pieces of information to be retrieved through the chat."
          },
          {
            "name": "question",
            "type": "string",
            "description": "Specifies the question the robot should utter when initiating the chat. If empty, the robot will use an autonomously generated question to initiate the chat"
          }
        ],
        "functional_domains": ["communication"]
      }
    </skill>

    <skill content-type="json">
      {
        "id": "chat",
        "description": "Start chatting with a person or a group of people",
        "interface": "action",
        "default_interface_path": "/chat",
        "datatype": "communication_skills/action/Chat",
        "parameters": [
          {
            "name": "person_id",
            "type": "string",
            "description": "The ID of the person to interact with. If empty, any user can be interacted with."
          },
          {
            "name": "group_id",
            "type": "string",
            "description": "The ID of the group of persons to interact with. If empty, any group of persons can be interacted with. If not empty, the 'person_id' field should be ignored."
          },
          {
            "name": "role",
            "type": "chatbot_msgs/msg/DialogueRole",
            "description": "TThe role of the chat."
          },
          {
            "name": "initiate",
            "type": "bool",
            "description": "Whether the chat should be initiated by the robot, otherwise it should wait for a user input."
          },
          {
            "name": "initial_input",
            "type": "bool",
            "description": "Specifies the text the robot should utter when initiating the chat. It is only used if the 'initiate' field is true."
          }
        ],
        "functional_domains": ["communication"]
      }
    </skill>

    <skill content-type="json">
      {
        "id": "say",
        "description": "Say something with multiple social modality, mainly speech utterance, but also gaze, gestures, etc.",
        "interface": "action",
        "default_interface_path": "/say",
        "datatype": "communication_skills/action/Say",
        "parameters": [
          {
            "name": "person_id",
            "type": "string",
            "description": "The ID of the person to interact with. If empty, any user can be interacted with."
          },
          {
            "name": "group_id",
            "type": "string",
            "description": "The ID of the group of persons to interact with. If empty, any group of persons can be interacted with. If not empty, the 'person_id' field should be ignored."
          },
          {
            "name": "input",
            "type": "string",
            "description": "The text to be uttered. It might contains additional markup for multi-modal communication."
          }
        ],
        "functional_domains": ["communication"]
      }
    </skill>
  </export>
</package>
